--- a/ct-chez-scheme/PKGBUILD
+++ b/ct-chez-scheme/PKGBUILD
@@ -11,17 +11,20 @@ conflicts=('petite-chez-scheme' 'chez-scheme-git')
 replaces=('petite-chez-scheme' 'chez-scheme-git')
 sha1sums=()
 
-_archivename=ChezScheme-master
+_fullsha1=$(git ls-remote -h -q https://github.com/cisco/ChezScheme.git master | awk '{print $1}')
+_shortsha1=$(echo "${_fullsha1}" | head -c 8)
+_archivename=ChezScheme-${_fullsha1}
+_url="https://github.com/cisco/ChezScheme/archive/${_fullsha1}.zip"
+_zipfile=ChezScheme-${_shortsha1}.zip
 
 pkgver() {
-    echo 9.4.$(git ls-remote -h -q https://github.com/cisco/ChezScheme.git master | awk '{print $1}' | head -c 8)
+    echo 9.4.${_shortsha1}
 }
 
 build() {
     cd "$srcdir"
-    [ -d $archivename ] && rm -rf ${_archivename}
-    curl -L https://github.com/cisco/ChezScheme/archive/master.zip > master.zip
-    unzip master.zip && rm master.zip
+    [[ ! -f ${_zipfile} ]] && curl -L ${_url} > ${_zipfile}
+    unzip ${_zipfile}
     cd ${_archivename} || exit
     git init
     rm -rf nanopass/ stex/ zlib/
