--- a/ct-chez-scheme/PKGBUILD
+++ b/ct-chez-scheme/PKGBUILD
@@ -6,26 +6,21 @@ arch=(i686 x86_64)
 url="https://github.com/cisco/ChezScheme"
 depends=()
 license=('APL')
-makedepends=('binutils' 'make' 'git' 'ncurses' 'libx11' 'xproto' 'unzip' 'curl')
+makedepends=('binutils' 'make' 'git' 'ncurses' 'libx11' 'xproto')
 conflicts=('petite-chez-scheme' 'chez-scheme-git')
 replaces=('petite-chez-scheme' 'chez-scheme-git')
-sha1sums=()
-
 _fullsha1=$(git ls-remote -h -q https://github.com/cisco/ChezScheme.git master | awk '{print $1}')
+source=("https://github.com/cisco/ChezScheme/archive/${_fullsha1}.zip")
+sha1sums=('SKIP')
 _shortsha1=$(echo "${_fullsha1}" | head -c 8)
 _archivename=ChezScheme-${_fullsha1}
-_url="https://github.com/cisco/ChezScheme/archive/${_fullsha1}.zip"
-_zipfile=ChezScheme-${_shortsha1}.zip
 
 pkgver() {
     echo 9.4.${_shortsha1}
 }
 
 build() {
-    cd "$srcdir"
-    [[ ! -f ${_zipfile} ]] && curl -L ${_url} > ${_zipfile}
-    unzip ${_zipfile}
-    cd ${_archivename} || exit
+    cd "$srcdir/${_archivename}" || exit
     git init
     rm -rf nanopass/ stex/ zlib/
     git submodule add git@github.com:nanopass/nanopass-framework-scheme.git nanopass
