--- a/ct-chez-scheme/PKGBUILD
+++ b/ct-chez-scheme/PKGBUILD
@@ -9,8 +9,8 @@ license=('APL')
 makedepends=('binutils' 'make' 'git' 'ncurses' 'libx11' 'xproto')
 conflicts=('petite-chez-scheme' 'chez-scheme-git')
 replaces=('petite-chez-scheme' 'chez-scheme-git')
-_fullsha1=$(git ls-remote -h -q https://github.com/cisco/ChezScheme.git master | awk '{print $1}')
-source=("https://github.com/cisco/ChezScheme/archive/${_fullsha1}.zip")
+_fullsha1=$(git ls-remote -h -q $url master | awk '{print $1}')
+source=("$url/archive/${_fullsha1}.zip")
 sha1sums=('SKIP')
 _shortsha1=$(echo "${_fullsha1}" | head -c 8)
 _archivename=ChezScheme-${_fullsha1}
