pcap-dnsproxy: change config dir

--- a/ct-pcap-dnsproxy/pcap-dnsproxy.service
+++ b/ct-pcap-dnsproxy/pcap-dnsproxy.service
@@ -6,7 +6,7 @@ Wants=network-online.target
 [Service]
 Type=forking
 WorkingDirectory=/usr/share/pcap-dnsproxy
-ExecStart=/usr/share/pcap-dnsproxy/Pcap_DNSProxy -c /home/dgeibi/.config/pcap-dnsproxy
+ExecStart=/usr/share/pcap-dnsproxy/Pcap_DNSProxy -c /etc/pcap-dnsproxy/
 GuessMainPID=yes
 Restart=on-failure
 RestartSec=10s
