pcap-dnsproxy: fix a logic bug

--- a/ct-pcap-dnsproxy/PKGBUILD
+++ b/ct-pcap-dnsproxy/PKGBUILD
@@ -9,7 +9,7 @@ arch=(i686 x86_64)
 url="https://github.com/chengr28/Pcap_DNSProxy"
 license=('GPL2')
 depends=('libpcap' 'libsodium')
-makedepends=('git' 'cmake' 'sh' 'm4' 'bison' 'flex' 'gcc')
+makedepends=('git' 'cmake' 'm4' 'bison' 'flex' 'gcc')
 provides=('pcap-dnsproxy')
 replaces=('pcap-dnsproxy-git' 'pcap-dnsproxy')
 conflicts=('pcap-dnsproxy-git' 'pcap-dnsproxy')
