chez-scheme: use release as source

--- a/ct-chez-scheme/PKGBUILD
+++ b/ct-chez-scheme/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=ct-chez-scheme
-pkgver=9.4.0f0468ff
+pkgver=9.4
 pkgrel=1
 pkgdesc="Chez Scheme is an implementation of the Revised6 Report on Scheme [27] (R6RS) with numerous language and programming environment extensions. (threaded build)"
 arch=(i686 x86_64)
@@ -9,14 +9,12 @@ license=('APL')
 makedepends=('binutils' 'make' 'git' 'ncurses' 'libx11' 'xproto')
 conflicts=('petite-chez-scheme' 'chez-scheme-git')
 replaces=('petite-chez-scheme' 'chez-scheme-git')
-_fullsha1=$(git ls-remote -h -q $url master | awk '{print $1}')
-source=("$url/archive/${_fullsha1}.zip")
+source=("$url/archive/v${pkgver}.tar.gz")
 sha1sums=('SKIP')
-_shortsha1=$(echo "${_fullsha1}" | head -c 8)
-_archivename=ChezScheme-${_fullsha1}
+_archivename=ChezScheme-$pkgver
 
 pkgver() {
-    echo 9.4.${_shortsha1}
+    git ls-remote -t https://github.com/cisco/ChezScheme | tail -1 | sed 's|.*refs/tags/v||'
 }
 
 build() {
