--- a/ct-pcap-dnsproxy/PKGBUILD
+++ b/ct-pcap-dnsproxy/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=ct-pcap-dnsproxy
 _pkgname=pcap-dnsproxy
-pkgver=0.4.6.2
+pkgver="$(curl https://raw.githubusercontent.com/chengr28/Pcap_DNSProxy/master/README.md | grep -A1 Updated | grep '\*\*[0-9].[0-9].[0-9].[0-9]\*\*' | tr -d '\*')"
 pkgrel=1
 pkgdesc="A local DNS server base on WinPcap and LibPcap."
 arch=(i686 x86_64)
@@ -20,10 +20,6 @@ source=("$url/archive/${_fullsha1}.zip"
 install="${_pkgname}.install"
 md5sums=('SKIP' 'SKIP')
 _archivename=Pcap_DNSProxy-${_fullsha1}
-
-pkgver() {
-    curl https://raw.githubusercontent.com/chengr28/Pcap_DNSProxy/master/README.md | grep -A1 Updated | grep '\*\*[0-9].[0-9].[0-9].[0-9]\*\*' | tr -d '\*'
-}
 
 build() {
     cd "${srcdir}/${_archivename}/Source/Scripts"
