--- a/ct-ttf-inziu-iosevka/PKGBUILD
+++ b/ct-ttf-inziu-iosevka/PKGBUILD
@@ -1,12 +1,12 @@
 # copy from https://aur.archlinux.org/packages/ttf-inziu-iosevka/
 
 pkgname=ct-ttf-inziu-iosevka
-pkgver=$(curl http://be5invis.github.io/Iosevka/inziu.html | grep -m 1 '{version:' | grep -o '[0-9].[0-9].[0-9]')
+pkgver=$(curl -L https://be5invis.github.io/Iosevka/inziu.html | grep -m 1 '{version:' | grep -o '[0-9].[0-9].[0-9]')
 pkgrel=1
 pkgdesc="A composite of Iosevka, M+ and Source Han Sans. It is fully hinted and optimized for screen display on every device, and every resolution."
 arch=('any')
 license=('unknown')
-url="http://be5invis.github.io/Iosevka/inziu.html"
+url="https://be5invis.github.io/Iosevka/inziu.html"
 depends=('fontconfig')
 conflicts=('ttf-inziu-iosevka')
 install="inziu-iosevka.install"
