--- a/ct-electronic-wechat-git/PKGBUILD
+++ b/ct-electronic-wechat-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=ct-electronic-wechat-git
 _pkgname=electronic-wechat
-pkgver=1.4.0.9.g0694b28
+pkgver=1.4.0.42.gfabd0d7
 pkgrel=1
 pkgdesc="An Electron application for WeChat"
 arch=('any')
