--- a/ct-pcap-dnsproxy/PKGBUILD
+++ b/ct-pcap-dnsproxy/PKGBUILD
@@ -22,7 +22,7 @@ md5sums=('SKIP' 'SKIP')
 _archivename=Pcap_DNSProxy-${_fullsha1}
 
 build() {
-    cd "${srcdir}/${_archivename}/Source/Scripts"
+    cd "${srcdir}/${_archivename}/Source/Auxiliary/Scripts"
     chmod 755 ./CMake_Build.sh
     ./CMake_Build.sh
 }
