--- a/etc/ct-electronic-wechat-git/PKGBUILD
+++ b/etc/ct-electronic-wechat-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=ct-electronic-wechat-git
 _pkgname=electronic-wechat
-pkgver=1.4.0.43.gb18ff6d
+pkgver=2.0.2.g8f9940e
 pkgrel=1
 pkgdesc="An Electron application for WeChat"
 arch=('any')
