--- a/ct-ttf-inziu-iosevka/PKGBUILD
+++ b/ct-ttf-inziu-iosevka/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="A composite of Iosevka, M+ and Source Han Sans. It is fully hinted and 
 arch=('any')
 license=('unknown')
 url="https://be5invis.github.io/Iosevka/inziu.html"
-depends=('fontconfig')
+depends=('fontconfig' 'xorg-font-utils')
 conflicts=('ttf-inziu-iosevka')
 source=(http://7xpdnl.dl1.z0.glb.clouddn.com/inziu-iosevka-$pkgver.7z)
 md5sums=('SKIP')
